# document-slammer

./: .gitignore  LICENSE.txt  Makefile  README.rst  package-lock.json  pyproject.toml  schema.rst
document_slammer/: __main__.py
document_slammer/commands/: sync.py
document_slammer/resources/: numbering.awk  schema.json  schema.yaml
document_slammer/templates/: Makefile.j2  title-and-toc.tex.j2
