[tool.poetry]
name = "document-slammer"
version = "0.1.0"
description = ""
authors = ["Raymond F. Wells <rfw2nd@gmail.com>"]
packages = [{include = "document_slammer"}]

[tool.poetry.dependencies]
python = "^3.11"
Jinja2 = "^3.1.2"
Pyright = "^1.1.318"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
